--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1>About:</h1>
         <p>My name is Benjamin Parker. I am an Electrical Engineering Student at Brigham Young University with special interests in robotics and control systems</p>
         <hr>
-        <h2>My Resume</h2>
+        <h2>My Example Resume</h2>
         <p>Projects:</p>
         <ul>
             <li>Raytheon Remote Server Room Robot</li>
