--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
-<html><head>
+<html>
+    <head>
         <title>Benjamin Parker's Portfolio</title>
+        <meta charset='UTF-8'/>
+        <link rel='stylesheet' href='styles.css'/>
     </head>
+    <style> /*example of page specific styling*/
+        ol {
+            color:rgb(82, 82, 88);
+        }
+    </style>
     <body>
-        <h1>About:</h1>
-        <p>My name is Benjamin Parker. I am an Electrical Engineering Student at Brigham Young University with special interests in robotics and control systems</p>
+        <ul class="navigation">
+            <li><a href = "#overview">Overview</a></li>
+            <li><a href = "#experience">Experience</a></li>
+            <li><a href = "#contact">Contact</a></li>
+            <li style="float:right"><a class="active" href = "#about">About</a></li>
+        </ul>
+        <h1 style='background-color:rgb(197, 197, 197);'>Overview:</h1>
+        <p id="about">My name is Benjamin Parker. I am an Electrical Engineering Student at Brigham Young University with special interests in robotics and control systems</p>
         <hr>
         <h2>My Example Resume</h2>
-        <p>Projects:</p>
-        <ul>
-            <li>Raytheon Remote Server Room Robot</li>
-            <li>Automating Financial Web Scraping and Report Generation</li>
-            <li>Remote Controlled Robotic Fishing Boat</li> 
-        </ul>
-        <p>Work Experience:</p>
-        <ol>
-            <li>Data Analyst and Automation Engineer at Marmon Utility</li>  
-            <li>Automation Engineer at Dorothy J. Cole Financial Planning</li>   
-            <li>Electical Engineer at Tycho LLC</li> 
-        </ol>
-        <p>Contact Info:</p>
-        <ul>
-            <li>Cell: 603-921-0630</li>
-            <li>Email: btparker96@gmail.com</li>
-            <li>Linkedin: <a href="https://www.linkedin.com/in/benjamin-parker" target="_blank">www.linkedin.com/in/benjamin-parker</a></li>
-            <li>GitHub: <a href="https://github.com/btparker96" target="_blank">github.com/btparker96</a></li>
-        </ul>
+        <div class="main">
+            <p>Projects:</p>
+            <ul class="experience">
+                <li>Raytheon Remote Server Room Robot</li>
+                <li>Automating Financial Web Scraping and Report Generation</li>
+                <li>Remote Controlled Robotic Fishing Boat</li> 
+            </ul>
+            <p>Work Experience:</p>
+            <ol class="experience">
+                <li>Data Analyst and Automation Engineer at Marmon Utility</li>  
+                <li>Automation Engineer at Dorothy J. Cole Financial Planning</li>   
+                <li>Electical Engineer at Tycho LLC</li> 
+            </ol>
+            <p>Contact Info:</p>
+            <ul class="contact">
+                <li>Cell: 603-921-0630</li>
+                <li>Email: btparker96@gmail.com</li>
+                <li>Linkedin: <a href="https://www.linkedin.com/in/benjamin-parker" target="_blank">www.linkedin.com/in/benjamin-parker</a></li>
+                <li>GitHub: <a href="https://github.com/btparker96" target="_blank">github.com/btparker96</a></li>
+            </ul>
+        </div>
+        <div style = "height: 10em"></div>
+        <div class="end">Thanks for visiting!</div>
     </body>
 </html>
