--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Benjamin Parker's Portfolio</title>
+        <title>Benjamin Parker: Portfolio</title>
         <meta charset='UTF-8'/>
         <link rel='stylesheet' href='styles.css'/>
     </head>
